# Project metadata and package information
[project]
name = "rhiza-cradle"
version = "0.1.0"
description = "CLI to create repos"
readme = "README.md"
authors = [{ name = "Jebel Quant Research", email = "contact@jqr.ae" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "copier>=9.8.0",
    "rich>=13.7.0",
    "pyyaml==6.0.3"
]

# URLs related to the project
[project.urls]
repository = "https://github.com/jebel-quant/rhiza-cradle"

# Entry points for command-line scripts
[project.scripts]
rhiza-cradle = "cradle.cli:main"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch wheel build configuration
[tool.hatch.build.targets.wheel]
packages = ["src/cradle"]

[tool.deptry.package_module_name_map]
pyyaml = ["yaml"]
typer = ["typer"]
copier = ["copier"]
rich = ["rich"]
